-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.4.0
-
3
-
7521
After 7e915f5d, in mdt_prepare() if the OBD_IOC_START_LFSCK ioctl() fails and mdt->mdt_seq_site.ss_node_id != 0 then the MDT will fail to mount.
static int mdt_prepare(const struct lu_env *env,
struct lu_device *pdev,
struct lu_device *cdev)
{
...
rc = mdt->mdt_child->md_ops->mdo_iocontrol(env, mdt->mdt_child,
OBD_IOC_START_LFSCK,
0, NULL);
if (rc != 0)
CWARN("Fail to auto trigger paused LFSCK.\n");
if (mdt->mdt_seq_site.ss_node_id == 0) {
rc = mdt->mdt_child->md_ops->mdo_root_get(env, mdt->mdt_child, &mdt->mdt_md_root_fid);
if (rc)
RETURN(rc);
}
...
}
If this is really the intended behavior (I assume not) then the CWARN() should be upgraded to CERROR().