LU-3098 mdt: continue on LFSCK start error in mdt_prepare()

In mdt_prepare() do not allow failure of the OBD_IOC_START_LFSCK
ioctl() to prevent mount from succeeding on slave MDTs.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: Ie3ab2e61037739e3324f6ec28e5f73be861b58f5
Reviewed-on: http://review.whamcloud.com/5931
Tested-by: Hudson
Reviewed-by: wangdi <di.wang@intel.com>
Reviewed-by: Fan Yong <fan.yong@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>